  e.g. regex checks against regular errors thrown by this library
  should be updated to check the new Hijk::Error::* constants instead.

- It's now possible to specify "head_as_array" to get the returned
  headers as an array (with potential duplicated headers), rather than
  the default behavior of lossily returning them as a hash.

0.15: # 2014-08-30T10:00:00+000
- The new code to support chunked transfer encoding would return a
  nonexisting Hijk::Error::* value of "0" when it encountered a read
  timeout. This meant that not only was the error reporting broken,
  but anything checking if there were errors via the simple idiom of
  "if ($res->{error}) {...}" wouldn't properly report errors.

  We'll now correctly report these errors as
  Hijk::Error::READ_TIMEOUT.

- Since there may still be other bugs like that in this new parsing
  mode it's disabled by default, if you know you want to parse chunked
  responses you have to pass parse_chunked => 1 for now. Usually you
  probably just want to disable chunked encoding on the other end, see
  the note about how to do that with nginx in the docs.

0.14: # 2014-08-29T15:40:36+0900
- Start support chunked transfer encoding.

0.13: # 2014-04-27T20:00:43+0200
- Switch to use non-blocknig fd to avoid a rare deadlock situation
  when select() is successful and the following read() blocks forever
  because there are really nothing to read.

0.12: # 2014-01-31T18:20:00+0100
- Instead of dying on e.g. "Bad arg length for
  Socket::pack_sockaddr_in, length is 0, should be 4" when given a
  host we can't resolve we'll now return a $res with the error value
  set to Hijk::Error::CANNOT_RESOLVEif we can't gethostbyname() the
  provided hostname. Makes it easier to handle DNS resolution
  failures.

0.11: # 2014-01-06T13:20:00+0100
- Fixed broken HTTP header parsing for servers that didn't return the
  entire header all at the same time, but in chunks.
- We now return "proto" as well as "status" etc. in the response, so