@@ -29,7 +29,7 @@ my $fd = do {
     fileno($fh);
 };
 
-my (undef, $proto, $status, $head, $body) = Hijk::_read_http_message($fd,0);
+my (undef, $proto, $status, $head, $body) = Hijk::_read_http_message($fd, 10240, 0);
 
 
 is $status, 200;
@@ -44,7 +44,7 @@ is_deeply $head, {
     "Connection" => "close",
 };
 
-(undef, $proto, $status, $head, $body, my $error, my $error_message) = Hijk::_read_http_message($fd, 0);
+(undef, $proto, $status, $head, $body, my $error, my $error_message) = Hijk::_read_http_message($fd, 10240, 0);
 is $error, Hijk::Error::RESPONSE_BAD_READ_VALUE;
 like $error_message, qr/0 byte/;
 
